[tool.poetry]
name = "Bevy.App"
version = "0.1.0"
description = "An app framework built on the Bevy inversion of control package."
authors = ["Zech Zimmerman <hi@zech.codes>"]
license = "MIT"
packages = [
    { include = "bevy_app" },
]

[tool.poetry.dependencies]
python = "^3.10"
bevy = "^1.0.7"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-asyncio = "^0.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
